--- a/templates/board.html
+++ b/templates/board.html
@@ -166,12 +166,43 @@
                             <hr class="m-0" style="width: 1px; border-left: solid 1px;">
                             <span class="m-0 text-ellipsis" style="font-size: 11px; color: rgba(255, 255, 255, 0.700);">Reply No.{{ reply.id }}</span>
                             <hr class="m-0" style="width: 1px; border-left: solid 1px;">
-                            <a
-                                onclick="highlightPostWithRedirect('{{ 'r' ~ (reply.reply_id | string) if reply.reply_id else 't' ~ (reply.thread_id | string) }}', 't{{ reply.related_thread_id }}')"
-                                href="#{{ 'r' ~ (reply.reply_id | string) if reply.reply_id else 't' ~ (reply.thread_id | string) }}"
-                                class="m-0 text-ellipsis" style="font-size: 11px; color: var(--post-highlight);">
-                                Replying to: {{ 'r-' ~ (reply.reply_id | string) if reply.reply_id else 't-' ~ (reply.thread_id | string) }}
-                            </a>
+                            {% if reply.reply %}
+                                <a
+                                    data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="right"
+                                    title="<div class='d-flex flex-column text-white' style=''>
+                                        <span style='font-size: 0.7rem !important;'>{{ reply.reply.user_token }} | Reply No.{{ reply.reply.id }}</span>
+                                        <hr class='my-1'>
+                                        <span class='fw-bold'>{{ reply.reply.content }}</span>
+                                        {% if reply.reply.image %}
+                                            <img src='/image/{{ thread.image.id }}'>
+                                        {% endif %}
+                                        <hr class='my-1'>
+                                        <span>{{ thread.date.strftime('%d/%m/%Y') }} | {{ thread.time }} UTC</span>
+                                    </div>"
+                                    onclick="highlightPostWithRedirect('{{ 'r' ~ (reply.reply_id | string) if reply.reply_id else 't' ~ (reply.thread_id | string) }}', 't{{ reply.related_thread_id }}')"
+                                    href="#{{ 'r' ~ (reply.reply_id | string) if reply.reply_id else 't' ~ (reply.thread_id | string) }}"
+                                    class="m-0 text-ellipsis" style="font-size: 11px; color: var(--post-highlight);">
+                                    Replying to: {{ 'r-' ~ (reply.reply_id | string) if reply.reply_id else 't-' ~ (reply.thread_id | string) }}
+                                </a>
+                            {% else %}
+                                <a
+                                    data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="right"
+                                    title="<div class='d-flex flex-column text-white' style=''>
+                                        <span style='font-size: 0.7rem !important;'>{{ thread.user_token }} | Thread No.{{ thread.id }}</span>
+                                        <hr class='my-1'>
+                                        <span class='fw-bold'>{{ thread.content }}</span>
+                                        {% if thread.image %}
+                                            <img src='/image/{{ thread.image.id }}'>
+                                        {% endif %}
+                                        <hr class='my-1'>
+                                        <span>{{ thread.date.strftime('%d/%m/%Y') }} | {{ thread.time }} UTC</span>
+                                    </div>"
+                                    onclick="highlightPostWithRedirect('{{ 'r' ~ (reply.reply_id | string) if reply.reply_id else 't' ~ (reply.thread_id | string) }}', 't{{ reply.related_thread_id }}')"
+                                    href="#{{ 'r' ~ (reply.reply_id | string) if reply.reply_id else 't' ~ (reply.thread_id | string) }}"
+                                    class="m-0 text-ellipsis" style="font-size: 11px; color: var(--post-highlight);">
+                                    Replying to: {{ 'r-' ~ (reply.reply_id | string) if reply.reply_id else 't-' ~ (reply.thread_id | string) }}
+                                </a>
+                            {% endif %}
 
 
                         </div>
@@ -722,8 +753,9 @@
         </div>
     </ul>
     
-
-    <script src="https://cdn.jsdelivr.net/npm/@fingerprintjs/fingerprintjs@3/dist/fp.min.js"></script>
+    
+    
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="{{ url_for('static', filename='js/board-thread.js') }}"></script>
     <script>
@@ -751,6 +783,16 @@
             }
         });
     </script>
+    
+    <script>
+        // Initialize Bootstrap tooltips
+        document.addEventListener("DOMContentLoaded", function () {
+            var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+            tooltipTriggerList.map(function (tooltipTriggerEl) {
+                return new bootstrap.Tooltip(tooltipTriggerEl);
+            });
+        });
+    </script>  
     
     {% if api_key %}
         <script>
