--- a/templates/thread.html
+++ b/templates/thread.html
@@ -79,7 +79,7 @@
         <hr class="border-white w-100 my-0" style="margin-top: 1rem !important;">
             
             <div class="d-flex w-100 px-2 py-1 align-items-start">
-                <a href="{{ url_for('Admin.Board' if api_key else 'Boards.Board', id=thread.board.id, **({'api_key': api_key} if api_key else {})) }}" title="{{ thread.board.name }}" style="font-size: 0.8rem; font-family: 'Courier New'; height: fit-content;">Back to /{{ thread.board.id }}</a>
+                <a href="{{ url_for('Admin.Board' if api_key else 'Boards.Board', id=thread.board.id, **({'api_key': api_key} if api_key else {})) }}" title="{{ thread.board.name }}" style="font-size: 0.8rem; font-family: Arial, Helvetica, sans-serif">Back to /{{ thread.board.id }}</a>
             </div>
             <link id="theme-style" rel="stylesheet" href="{{ url_for('static', filename='css/board-thread.css') }}">
 
@@ -112,12 +112,43 @@
                             <hr class="m-0" style="width: 1px; border-left: solid 1px;">
                             <p class="m-0 text-ellipsis" style="font-size: 11px; color: rgba(255, 255, 255, 0.700);">Reply No.{{ reply.id }}</p>
                             <hr class="m-0" style="width: 1px; border-left: solid 1px;">
-                            <a
-                                onclick="highlightPost({{ 'r' ~ (reply.reply.id | string) if reply.reply else 't' ~ (reply.thread.id | string) }})"
-                                href="#{{ 'r' ~ (reply.reply.id | string) if reply.reply else 't' ~ (reply.thread.id | string) }}"
-                                class="m-0 text-ellipsis" style="font-size: 11px; color: var(--post-highlight);">
-                                Replying to: {{ 'r-' ~ (reply.reply.id | string) if reply.reply else 't-' ~ (reply.thread.id | string)}}
-                            </a>
+                            {% if reply.reply %}
+                                <a
+                                    data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="right"
+                                    title="<div class='d-flex flex-column text-white' style=''>
+                                        <span style='font-size: 0.7rem !important;'>{{ reply.reply.user_token }} | Reply No.{{ reply.reply.id }}</span>
+                                        <hr class='my-1'>
+                                        <span class='fw-bold'>{{ reply.reply.content }}</span>
+                                        {% if reply.reply.image %}
+                                            <img src='/image/{{ reply.reply.image.id }}'>
+                                        {% endif %}
+                                        <hr class='my-1'>
+                                        <span>{{ thread.date.strftime('%d/%m/%Y') }} | {{ thread.time }} UTC</span>
+                                    </div>"
+                                    onclick="highlightPostWithRedirect('{{ 'r' ~ (reply.reply_id | string) if reply.reply_id else 't' ~ (reply.thread_id | string) }}', 't{{ reply.related_thread_id }}')"
+                                    href="#{{ 'r' ~ (reply.reply_id | string) if reply.reply_id else 't' ~ (reply.thread_id | string) }}"
+                                    class="m-0 text-ellipsis" style="font-size: 11px; color: var(--post-highlight);">
+                                    Replying to: {{ 'r-' ~ (reply.reply_id | string) if reply.reply_id else 't-' ~ (reply.thread_id | string) }}
+                                </a>
+                            {% else %}
+                                <a
+                                    data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="right"
+                                    title="<div class='d-flex flex-column text-white' style=''>
+                                        <span style='font-size: 0.7rem !important;'>{{ thread.user_token }} | Thread No.{{ thread.id }}</span>
+                                        <hr class='my-1'>
+                                        <span class='fw-bold'>{{ thread.content }}</span>
+                                        {% if thread.image %}
+                                            <img src='/image/{{ thread.image.id }}'>
+                                        {% endif %}
+                                        <hr class='my-1'>
+                                        <span>{{ thread.date.strftime('%d/%m/%Y') }} | {{ thread.time }} UTC</span>
+                                    </div>"
+                                    onclick="highlightPostWithRedirect('{{ 'r' ~ (reply.reply_id | string) if reply.reply_id else 't' ~ (reply.thread_id | string) }}', 't{{ reply.related_thread_id }}')"
+                                    href="#{{ 'r' ~ (reply.reply_id | string) if reply.reply_id else 't' ~ (reply.thread_id | string) }}"
+                                    class="m-0 text-ellipsis" style="font-size: 11px; color: var(--post-highlight);">
+                                    Replying to: {{ 'r-' ~ (reply.reply_id | string) if reply.reply_id else 't-' ~ (reply.thread_id | string) }}
+                                </a>
+                            {% endif %}
                         </div>
 
                         <p class="chan-text-content" style="min-height: {{'1.5rem' if reply.image else '2.5rem'}};">{{ reply.content|safe }}</p>
@@ -177,7 +208,7 @@
 
 
             {% if thread.type == 1 %}
-                <div class="d-flex gap-1 overflow-x-auto" id="img-div-t{{ thread.id }} style="max-width: 100vw;">
+                <div class="d-flex w-100 gap-1 overflow-x-auto" id="img-div-t{{ thread.id }} style="max-width: 100vw;">
                     {% if thread.image %}
                         <div class="d-flex flex-column justify-content-start" style="max-width: 235px; max-height: fit-content; min-width: 200px;">
                             <img class="rounded-1 shadow" src="{{ url_for('Images.Image', id=thread.image.id) }}" onclick="maxOrMin({{ thread.id }}, 't')">
@@ -234,11 +265,12 @@
                                 </div>
                             </div>
                         </div>
+                        <hr class="border-white my-1 mx-3" style="border-style: dotted; border-width: 1px 0 0 0;">
                         {{ render_replies(thread.replies, 2, thread) }}    
                     </div>    
                 </div>
             {% else %}
-                <div class="d-flex gap-1 overflow-x-auto" id="img-div-t{{ thread.id }}" style="max-width: 100vw;">
+                <div class="d-flex w-100 gap-1 overflow-x-auto" id="img-div-t{{ thread.id }}" style="max-width: 100vw;">
                     {% if thread.image %}
                         <div class="d-flex flex-column justify-content-start" style="max-width: 235px; max-height: fit-content;">
                             <img class="rounded-1 shadow" src="{{ url_for('Images.Image', id=thread.image.id) }}" onclick="maxOrMin({{ thread.id }}, 't')">
@@ -291,6 +323,7 @@
                                 </div>
                             </div>
                         </div>
+                        
                         {{ render_replies(thread.replies, 2, thread) }}    
                     </div>    
                 </div>
@@ -350,6 +383,15 @@
             }
         });
     </script>
+    <script>
+        // Initialize Bootstrap tooltips
+        document.addEventListener("DOMContentLoaded", function () {
+            var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+            tooltipTriggerList.map(function (tooltipTriggerEl) {
+                return new bootstrap.Tooltip(tooltipTriggerEl);
+            });
+        });
+    </script> 
     {% if api_key %}
         <script>
             async function deletePost(id, post_type){
