--- a/templates/thread.html
+++ b/templates/thread.html
@@ -384,11 +384,12 @@
         });
     </script>
     <script>
-        // Initialize Bootstrap tooltips
         document.addEventListener("DOMContentLoaded", function () {
             var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
             tooltipTriggerList.map(function (tooltipTriggerEl) {
-                return new bootstrap.Tooltip(tooltipTriggerEl);
+                return new bootstrap.Tooltip(tooltipTriggerEl, {
+                    trigger: "hover"
+                });
             });
         });
     </script> 
